# Sparkle

./: .gitmodules  .ninja_deps  .ninja_log  Makefile  build.ninja  compile_commands.json  premake5.lua
.cache/clangd/index/: Log.cpp.163DB684DD6B3684.idx  Sparkle.h.0DDCCE1436695D9D.idx  ansicolor_sink-inl.h.BFCA5E60039F53EF.idx  ansicolor_sink.h.E2C6EB551E360B14.idx  backtracer-inl.h.F0211E94BE9E2B39.idx  backtracer.h.44118FDEA324C065.idx  base.h.19BB81D66202ECAB.idx  circular_q.h.5E33C7528E327A12.idx  common-inl.h.60A2ED1CB5DB197E.idx  common.h.6B21A66E7325F8CF.idx  console_globals.h.66EC928B766DCC05.idx  context.c.734158B8041AE285.idx  core.h.035012E8B4305EB3.idx  core.h.2AE07E5C4C5ABF87.idx  egl_context.c.1FD038FC9F4C5E96.idx  engine.cpp.36300B79AEB7577B.idx  engine.h.0CCAE3141C70F8BB.idx  entry_point.h.6ABB4387E740DD6E.idx  event.h.A83C9FAC59FDBC59.idx  fmt.h.2991C4D0B6973F7B.idx  fmt_helper.h.F63DC7226018CEC6.idx  format-inl.h.3FB2D6DE11CF2752.idx  format.h.4D84A0F685ABB208.idx  formatter.h.B2474AF5C488AFD7.idx  glfw3.h.4DB2253D6D371E6F.idx  glfw3native.h.A5E48FB129B6FA59.idx  glx_context.c.C70978F6750AE5C6.idx  init.c.86708FC2F8E807F3.idx  input.c.080188C0AEAD8737.idx  internal.h.CA20227B4C077D0B.idx  linux_joystick.c.63744BE94A06053E.idx  linux_joystick.h.2EFF8966730548B1.idx  log.cpp.1A7ACE9CFF6ADDB5.idx  log.h.7E89CCC5065762EF.idx  log_msg-inl.h.3F519B26B789D2A4.idx  log_msg.h.F5851244B686CC8E.idx  log_msg_buffer-inl.h.C7F4C524E5FFD45C.idx  log_msg_buffer.h.75FA2EE1FFCD7BCF.idx  logger-inl.h.944282FA009C4C49.idx  logger.h.7173F8F6319FAE61.idx  (+42 more)
Application/: Makefile  build_Application_Debug.ninja  build_Application_Release.ninja
Application/src/: main.cpp
Engine/: CMakeLists.txt  build_and_run.sh
Engine/include/: Sparkle.h  base.h  engine.h  events.h  eventsystem.h  input_codes.h  input_system.h  log.h  pch.h  window.h
Engine/include/Sparkle/: Base.h  Engine.h  EventSystem.h  Events.h  ImGuiLayer.h  InputCodes.h  InputSystem.h  Layer.h  LayerStack.h  Log.h  Renderer.h  Window.h  base.h  engine.h  events.h  eventsystem.h  imguilayer.h  input_system.h  layer.h  layer_stack.h  log.h  window.h
Engine/src/: Engine.cpp  EventSystem.cpp  ImGuiLayer.cpp  InputSystem.cpp  LayerStack.cpp  Renderer.cpp  Window.cpp  engine.cpp  eventsystem.cpp  imguilayer.cpp  input_system.cpp  layer_stack.cpp  main.cpp  window.cpp
Sparkle/: Makefile  build_Sparkle_Debug.ninja  build_Sparkle_Release.ninja
Sparkle/src/: Sparkle.h  sprkpch.cpp  sprkpch.h
Sparkle/src/Core/: core.h  engine.cpp  engine.h  entry_point.h  event.h  log.cpp  log.h  window.h
Sparkle/src/Platform/: linux_window.cpp  linux_window.h
bin-int/Debug/linux-x86_64/Application/: main.d
bin-int/Debug/linux-x86_64/Sparkle/: engine.d  linux_window.d  log.d  sprkpch.d  sprkpch.h.d
